--- a/ContosoWebSite/ContosoWebSite.vbproj
+++ b/ContosoWebSite/ContosoWebSite.vbproj
@@ -66,8 +66,7 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System" />
@@ -92,6 +91,11 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="default.html" />
+    <Content Include="ExpenseReports.html" />
+    <Content Include="HumanResources.html" />
+    <Content Include="Images\ContosoLogo.jpg" />
+    <Content Include="MainContent.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
